Changes in 0.62.8:
  * EnforceSonameBuildRequirements enhanced to use the system database to
    find the right missing build requirements.
  * Make users and groups in a repository such that they may not differ only
    in case, i.e. if user foo exists, user Foo cannot be created.

Changes in 0.62.7:
  * Some unneeded parts of the sql query in _getTroveList have been removed,
    improving performance.
  * The performance of the default (and most used) case of the
    getAllTroveLeaves has been increased up by using a specialized
    query.
  * Exception handling in the repository when revoked or expired keys
    are used has been corrected.
  * Signature checking now correctly checks the timestamp of the signature
    against the expiration time (if any) of the key that signed it.  If
    the signature timestamp is later than the expiration timestamp,
    the signature is rejected.
  * Pass 'Database is locked' repository errors to the client as a
    RepositoryLocked exception notifying user that the server is busy.
  * The 'yuck' script is no longer installed.
  * ComponentRequires now makes :runtime, :lib, :devellib, and :devel
    components all require their matching :config component if the
    :config component exists.  The :config component is not automatically
    created, but when it exists, it's always going to be because it
    is required by multiple other components.

Changes in 0.62.6:
  * mergeCollections() didn't always handle referenced troves changing
    byDefault status
  * Various cleanups and simplifications have been made to the trove
    removal determination

Changes in 0.62.5:
  * Allow selection of individual troves from change set files via --from-file
  * Recursive queries on local database could get upset by a missing trove
  * Underlying dependency code returns version and flavor for troves with
    broken dependencies
  * Underlying dependency code returns information on what removed trove
    caused a broken dependency